--- a/Capstone 2 v11.ipynb
+++ b/Capstone 2 v11.ipynb
@@ -242,6 +242,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It has been debated if you should split before vectorization. I chose to split first so that there was no risk that my training set would leak into the test set. Here are two other sources:\n",
+    "\"Split then vectorize (correct way). We do the train/test split before the CountVectorizer to properly simulate the real world where our future data contains words we have not seen before.\" http://www.ritchieng.com/machine-learning-multinomial-naive-bayes-vectorization/\n",
+    "\n",
+    "\"That makes no difference. If you split first, make sure your vectorize the same way.\" http://text2vec.org/vectorization.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Model fitting\n",
     "To streamline the code, I will be using both pipelines and grid_search in the model fitting steps. Pipelines allow for a linear sequence of data transforms to be chained together in a modeling process that can be evaluated. The purpose of the grid_search is to evaluate the model under different combinations of hyper-parameters. This will result in single 'best estimator'.\n",
     "\n",
